[package]
name = "meshnet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
get_if_addrs = "0.5.3"
hostname = "0.4.2"
http-body-util = "0.1.3"
indicatif = "0.18.4"
inquire = "0.9.4"
local-ip-address = "0.6.13"
mdns-sd = "0.20.1"
reqwest = { version = "0.13.4", features = ["stream", "multipart"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
uuid = { version = "1.23.4", features = ["v4"] }
